updated config report test results in ci

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -5,8 +5,14 @@ database {
 }
 
 anki {
-	url = "http://10.43.9.155"
-	deck = "skyeng"
+	"tv": {
+		url = "http://10.43.9.155"
+		deck = "skyeng"
+	}
+	"k": {
+		url = "http://10.43.149.198"
+		deck = "test"
+	}
 }
 
 skyeng {
