--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,3 +25,8 @@ jobs:
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: dockerTagsPush
+    - name : Publish Test Report
+      uses : mikepenz/action-junit-report@v3
+      if : success() || failure() # always run even if the previous step fails
+      with :
+        report_paths : '**/build/test-results/test/TEST-*.xml'
