--- a/.editorconfig
+++ b/.editorconfig
@@ -152,7 +152,7 @@ ij_properties_spaces_around_key_value_delimiter = false
 indent_size = 4
 ij_yaml_keep_indents_on_empty_lines = false
 ij_yaml_keep_line_breaks = true
-ij_yaml_space_before_colon = true
+ij_yaml_space_before_colon = false
 ij_yaml_spaces_within_braces = true
 ij_yaml_spaces_within_brackets = true
 charset = utf-8
