--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,15 +19,20 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Authenticate on Github
-        uses: actions/labeler@v4
+        uses: docker/login-action@v1
+        env:
+          GITHUB_USER: ${{ github.actor }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          registry: ghcr.io
+          username: $GITHUB_USER
+          password: $GITHUB_TOKEN
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: dockerTagsPush
       - name: Publish Test Report
         uses: mikepenz/action-junit-report@v3
-        if: success() || failure() # always run even if the previous step fails
+        if: failure()
         with:
           report_paths: '**/build/test-results/test/TEST-*.xml'
