--- a/resources/application.conf
+++ b/resources/application.conf
@@ -18,7 +18,9 @@ anki {
 skyeng {
 	user = "test@gmail.com"
 	password = "1234"
-	studentId = "1234"
+	studentId = {
+		"a": 12345678
+	}
 	uploadAfter = "2023-03-08"
 }
 
