--- a/resources/default.conf
+++ b/resources/default.conf
@@ -13,6 +13,8 @@ skynki {
 	skyeng {
 		user = "user"
 		password = "password"
-		studentId = "12345678"
+		studentId = {
+			"a" = 12345678
+		}
 	}
 }
