updated test resource

--- a/testresources/application.conf
+++ b/testresources/application.conf
@@ -9,16 +9,22 @@ anki {
 		url = "http://10.43.9.155"
 		deck = "skyeng"
 	}
-	"k": {
+	"k_de": {
 		url = "http://10.43.149.198"
 		deck = "test"
+	}
+	"k_en": {
+		url = "http://10.43.149.198"
+		deck = "MySkyengDeck"
 	}
 }
 
 skyeng {
 	user = "test"
 	password = ""
-	studentId = "1234567"
+	studentId = {
+		"a" = 12345678
+	}
 	uploadAfter = "2023-03-08"
 }
 
