created a skyeng instance for each student id

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -16,12 +16,18 @@ anki {
 }
 
 skyeng {
-	user = "test@gmail.com"
-	password = "1234"
-	studentId = {
-		"a": 12345678
+	"tv": {
+		user = "test@gmail.com"
+		password = "1234"
+		studentId = 12345678
+		uploadAfter = "2023-03-08"
 	}
-	uploadAfter = "2023-03-08"
+	"k": {
+		user = "test@gmail.com"
+		password = "1234"
+		studentId = 12345678
+		uploadAfter = "2023-03-08"
+	}
 }
 
 chatterbug {
