--- a/testresources/application.conf
+++ b/testresources/application.conf
@@ -20,12 +20,12 @@ anki {
 }
 
 skyeng {
-	user = "test"
-	password = ""
-	studentId = {
-		"a" = 12345678
+	"a": {
+		user = "test"
+		password = ""
+		studentId = 12345678
+		uploadAfter = "2023-03-19"
 	}
-	uploadAfter = "2023-03-08"
 }
 
 chatterbug {
